@@ -65,11 +65,6 @@ atcommand_gm_only: no
 // Is the character of a GM account set as the object of a display by @ command etc. or not?
 hide_GM_session: no
 
-// Ban people that try to use an other name of its name (spoof name).
-// Duration of the ban, in minutes (default: 5). Value from 0 to 32767
-// to disable the ban, set 0
-ban_spoof_namer: 5
-
 // Ban people that try trade dupe.
 // Duration of the ban, in minutes (default: 5). Value from 0 to 32767
 // to disable the ban, set 0
